# routes/stockRoutes.js
@@ -1,12 +1,10 @@
 const express = require('express')
 const router = express.Router()
-const chartController = require('../controllers/chartController')
+const chartController2 = require('../controllers/chartController2')
 const searchController = require('../controllers/searchController')
-const allStocksController = require('../controllers/allStocksController')
 
 // GET 특정 차트 데이터 조회
-router.get('/chart/:stock_code', chartController.getChart)
-router.get('/chart', searchController.searchStockByName)
-router.get('/chart/', allStocksController.getStocks)
+router.get('/chart/:stock_code', chartController2.getChart)
+router.get('/', searchController.searchStockByName)
 
 module.exports = router
