# swagger-output.json
@@ -601,6 +601,31 @@
           }
         }
       }
+    },
+    "/stocks/": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "stock_name",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "components": {
